--- a/index.html
+++ b/index.html
@@ -126,17 +126,24 @@
         }
         
         button {
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            padding: 12px 15px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            width: 100%;
-            transition: background-color 0.3s;
-        }
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    padding: 12px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+    transition: background-color 0.3s;
+}
+
+.logout-btn {
+    width: auto;
+    padding: 8px 16px;
+    margin-left: 10px;
+}
         
+
         button:hover {
             background-color: #ff5252;
         }
@@ -818,7 +825,7 @@
         </div>
         <div id="user-ui" style="display: none;">
             <span id="user-email"></span>
-            <button id="logout-btn">Log Out</button>
+            <button id="logout-btn" class="logout-btn">Log Out</button>
         </div>
         <div id="auth-message" class="auth-message"></div>
     </div>
